// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Reader without crashing, matches snapshot 1`] = `ShallowWrapper {}`;

exports[`addKey creates React elements that match snapshot. 1`] = `
<type
  node={null}
/>
`;

exports[`serializeLeaf maps leaves into marks components with keys 1`] = `
<em
  node={null}
>
  <span
    node={null}
  >
    This is the first post to go onto this website.
  </span>
</em>
`;

exports[`serializeString returns string, wrapped in consistent components. 1`] = `
<span
  node={null}
>
  This is the first post to go onto this website.
</span>
`;
